--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-  "build": "vite build",
-  "dev": "vite"
-}
+    "build": "vite build",
+    "dev": "vite",
     "preview": "vite preview"
   },
   "dependencies": {
